# MUC

./: Cargo.toml  readme.md  tlslearning.txt
client/: Cargo.toml
client/src/: client.rs  main.rs  ui.rs
client/src/server/: handler.rs  mod.rs
server/: Cargo.toml
server/files/: accounts.ron
server/src/: account_manager.rs  client.rs  client_handler.rs  error.rs  file.rs  main.rs  server.rs
server/src/client/: files.rs  filesystem.rs  handler.rs  mod.rs
shared/: Cargo.toml
shared/src/: error.rs  filesystem.rs  id.rs  lib.rs  logger.rs  networking.rs  server.rs  threading.rs
