[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bincode = "1.3.3"
# laminar = "0.5.0"
# log = "0.4.17"
# rand = "0.8.5"
# rsa = { version = "0.8.2", features = ["serde"] }
shared = { path = "../shared" }

