[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]

[dependencies]
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
rsa = { version = "0.8.2", features = ["serde"] }
serde = { version = "1.0.157", features = ["derive"] }

